Refactor welcome workflow to simplify authentication
why wont this work

--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -9,15 +9,8 @@ jobs:
     name: Post welcome comment
     runs-on: ubuntu-latest
     steps:
-      - name: Authenticate gh
-        run: |
-          # pipe the GITHUB_TOKEN into gh so the CLI is authenticated non-interactively
-          echo "${GITHUB_TOKEN}" | gh auth login --with-token
+      - run: gh pr comment "$PR_URL" --body "Welcome to the repository!"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Post welcome comment
-        run: gh pr comment "$PR_URL" --body "Welcome to the repository!"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
