--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened]
 permissions:
-  issues: write
+  pull-requests: write
 jobs:
   welcome:
     name: Post welcome comment
@@ -12,4 +12,5 @@ jobs:
       - run: gh pr comment "$PR_URL" --body "Welcome to the repository!"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
